Fix truncation and tooltip issues

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -63,6 +63,7 @@ $color-social-icon-foreground: $color-light;
 @include vf-u-hide;
 @include vf-u-show;
 @include vf-u-layout;
+@include vf-u-truncate;
 
 @import "snapcraft_custom-cols";
 @include snapcraft-custom-cols;
@@ -252,9 +253,6 @@ $color-social-icon-foreground: $color-light;
 @import "snapcraft_p-release-details-row";
 @include snapcraft-p-release-details-row;
 
-@import "snapcraft_builds";
-@include snapcraft-builds;
-
 // **** Vanilla overrides & temporary bug fixes ****
 
 // Temporary bug fix for https://github.com/canonical-web-and-design/vanilla-framework/issues/2791
@@ -267,4 +265,16 @@ dl {
   height: auto !important;
   opacity: 1 !important;
   transition: opacity .5s ease-in;
+}
+
+// Vanilla bug: https://github.com/canonical-web-and-design/vanilla-framework/issues/3321
+
+.u-show--small {
+  @media screen and (max-width: $breakpoint-medium) {
+    // we duplicate display to support IE
+    // sass-lint:disable no-duplicate-properties
+    display: inherit !important;
+    display: initial !important;
+    // sass-lint:enable no-duplicate-properties
+  }
 }
